src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
	--scrollbar-color: #d1d5db; /* theme("colors.gray.300") */
	@apply caret-blue-600 selection:bg-blue-100;
}

html,
body {
	padding: 0;
	margin: 0;
	font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
		sans-serif;
}

#__next {
	height: 100vh;
	overflow-y: auto;
}

* {
	box-sizing: border-box;
}

#nprogress .bar {
	background: black;
}

#nprogress .spinner {
	display: none;
}

/* firefox scrollbar */
html,
* {
	scrollbar-width: auto;
	scrollbar-color: var(--scrollbar-color) transparent !important;
}

/* non-firefox scrollbar */
::-webkit-scrollbar {
	overflow: overlay;
	height: 6px;
	width: 8px;
}

::-webkit-scrollbar-track {
	display: initial;
}

::-webkit-scrollbar-thumb {
	background-color: var(--scrollbar-color);
	border-radius: 9px;
}

@layer utilities {
	.heroicon-sw-2 path {
		stroke-width: 2 !important;
	}

	.heroicon-sw-1\.75 path {
		stroke-width: 1.75 !important;
	}

	.heroicon-sw-1\.5 path {
		stroke-width: 1.5 !important;
	}

	.heroicon-sw-1 path {
		stroke-width: 1 !important;
	}
}

